# unm-frame

./: LICENSE
unm/: Cargo.toml
unm-android/app/: build.gradle
unm-android/app/src/main/: AndroidManifest.xml
unm-android/app/src/main/java/org/bevyengine/example/: MainActivity.java
unm-android/app/src/main/res/values/: styles.xml
unm-android/gradle/: libs.versions.toml
unm-android/gradle/wrapper/: gradle-wrapper.properties
unm/.cargo/: config.toml
unm/unm/: Cargo.toml
unm/unm-sfx/: Cargo.toml  build.rs
unm/unm-sfx/old/: atlas copy.rs  decoder copy.rs  mixer copy.rs
unm/unm-sfx/src/: atlas.rs  backend.rs  clip.rs  decoder.rs  lib.rs  mixer.rs  player.rs
unm/unm-sfx/src/backend/: cpal.rs  oboe.rs
unm/unm-tools/: Cargo.toml
unm/unm-tools/src/: id_map.rs  lib.rs
unm/unm/src/: app.rs  camera.rs  draw_call.rs  game_loop.rs  game_settings.rs  graphics.rs  input.rs  lib.rs  material.rs  msaa.rs  my_game.rs  render_command.rs  render_context.rs  render_target.rs  resolution.rs  texture.rs  tools.rs  uniform.rs  utils.rs  vertex.rs
unm/unm/src/shaders/: BasicShapes.wgsl  BasicShapes1.wgsl  CameraUniform.wgsl
unm/unm/src/tools/: fps_limiter.rs  jni_utils.rs  platform_specific.rs  time_manager.rs
