[package]
name = "unm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "unm"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
bytemuck = "1.24.0"
glam = "0.31.0"

winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = { version = "28.0.0" }
log = "0.4.29"

tokio = { version = "1.49.0", features = ["full"] }

pollster = "0.4.0"

spin_sleep = "1.3.3"

image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
crossbeam-queue = "0.3"

unm-sfx = { path = "../unm-sfx" }
unm-tools = { path = "../unm-tools" }

# Windows
[target.'cfg(target_os = "windows")'.dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
ndk = { version = "0.9.0", optional = true }
jni = "0.21.1"

winit = { version = "0.30.12", features = ["android-game-activity"], default-features = false }

# Ios
[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"
